Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/StringsInSwitch/BadlyTypedLabel1.out
BadlyTypedLabel1.java:12:14: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: int, java.lang.String)
1 error
